add zdf nav; add results-single

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -41,6 +41,8 @@
 }
 
 #networkviz {
+  left: -1087px; // This is for show
+  top: -1201px; // should be set by current active entity
   svg {
     position: relative!important;
   }
@@ -119,10 +121,37 @@ line.link {
     margin-top:7px;
     max-width:45px;
     max-height:26px;
+        float:left;
+
+  }
+
+  .zdf-nav {
+    margin-top:11px;
+    margin-left:7px;
+    text-align:left;
+    font-size:14px;
+    float:left;
+
+    a {
+      padding-left:10px;
+      border-left:1px solid white;
+    }
   }
   .mini-nav {
-        margin-top:12px;
-  text-align:right;
+    margin-top:12px;
+    text-align:right;
+    font-size:14px;
+    a {
+      padding-right:10px;
+      padding-left:10px;
+      border-right:1px solid white;
+
+      &:last-child {
+        border-right:0px;
+        padding-right:0px;
+      }
+    }
+
   }
   a {
     color:white;
@@ -216,41 +245,34 @@ line.link {
     display: none;
 }
 
-#map {
-  width:750px;
-  height:750px;
-  position: fixed!important;
-  top: 0;
-  left: 0;
-  display:none;
-  opacity:0;
-}
 
 svg {
-  
   position: fixed!important;
   top: 0;
   left: 0;
- }
+}
 
 .viewport-visual {
   min-height:250px;
-  border:1px solid red;
-  margin-top:190px;
 
+  margin-top:170px;
+
+  border:1px solid red;
   span {
     font-size:70%;
     font-family:monospace;
     color:red;
     margin-left:-10px;
+    display:none;
   }
+  border:0px;
 }
 @media (min-width: @screen-sm-min) {
   .viewport-info { margin-top:170px; }
 }
-@media (min-width: @screen-md-min) {
 
-.result-list {margin-right:40px; }
+@media (min-width: @screen-md-min) {
+  .result-list, .result-single { margin-right:40px; }
 }
 .btn-ext {
   margin-top:17px;
@@ -262,7 +284,7 @@ svg {
   padding:19px;
   z-index: 99!important;
   background:white;
-
+  color:#111;
 
 }
 
@@ -271,6 +293,10 @@ svg {
   display: none;
   position: relative;
   top:0;
+  background:white;
+  color:#111;
+  padding:19px;
+  z-index: 99!important;
 }
 
 .avatar {
