--- a/assets/views/navigation.mustache
+++ b/assets/views/navigation.mustache
@@ -1,13 +1,18 @@
-<div class="zdf-header-grey">
+<div class="zdf-header-grey navbar">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3 col-xs-1">
 				<img class="zdf-logo img-responsive" src="/assets/images/ZDF-logo-45x26.svg" onerror="this.src='/assets/images/ZDF-logo-45x26.png';this.onerror=null;" alt="ZDF" >
+					<div class="zdf-nav">
+						<a href="">ZDFHeute</a>
+					</div>
 			</div>
 			<div class="col-md-7 col-md-offset-2 col-xs-11">
+			
 				<div class="mini-nav">
-					<a href="">Browser-Extension installieren!</a> 
-					<a href="" class="hamburger"><i class="fa fa-bars"></i></a>
+					<a href="">Browser-Erweiterung</a> 
+					<a href="">FAQ & Hilfe</a> 
+					<a href="">Abspann</a> 
 				</div>
 			</div>
 		</div>
@@ -18,11 +23,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3 col-xs-12">
-				<a class="navbar-brand" href="#">    
+				<a class="logo-name navbar-brand" href="#">    
 					<span class="fa-stack fa-lg">
 						<i class="fa fa-bullseye fa-5x"></i>
 						<i class="fa fa-suitcase fa-stack-1x symbol"></i>
-					</span>             
+					</span>         
 							<img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
 				</a>
 			</div>
