--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -25,6 +25,7 @@
   background: -o-linear-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* W3C */
+
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11354b', endColorstr='#6392a8',GradientType=0 ); /* IE6-9 */
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -43,6 +44,23 @@
 #networkviz {
   left: -1087px; // This is for show
   top: -1201px; // should be set by current active entity
+  cursor:-moz-grab;
+  cursor:-webkit-grab;
+  // cursor: url(https://mail.google.com/mail/images/2/openhand.cur), default !important;
+  // background: -moz-radial-gradient(top,  #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%); /* FF3.6+ */
+  // background: -webkit-gradient(radial, left top, left bottom, color-stop(0%,#11354b), color-stop(65%,#a1bdc9), color-stop(77%,#a1bdc9), color-stop(100%,#6392a8)); /* Chrome,Safari4+ */
+  // background: -webkit-radial-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* Chrome10+,Safari5.1+ */
+  // background: -o-radial-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* Opera 11.10+ */
+  // background: -ms-radial-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* IE10+ */
+  // background: radial-gradient(to bottom,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* W3C */
+
+  &.ui-draggable-dragging {
+    cursor:grabbing;
+    cursor:-moz-grabbing;
+    cursor:-webkit-grabbing;
+    // cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), default !important;
+  }
+
   svg {
     position: relative!important;
   }
@@ -101,7 +119,7 @@ line.link {
   left:0px;
   z-index:999;
   color:white!important;
-  .container { margin-top:70px; }
+  .container { margin-top:120px; }
 }
 
 @media (min-width: @screen-md-min) {
@@ -111,11 +129,77 @@ line.link {
 .zdf-header-grey {
   width: 100%;
   background: url(../images/zdf-header-grey.png) repeat-x 0 0 transparent;
-  height: 46px;
+  height: 46px!important;
+  min-height: 46px!important;
   top:0px;
   position: absolute;
   min-width: 0px;
-  z-index:999;
+  z-index:1030;
+  border:0px!important;
+  margin-bottom:0px;
+.miz-logo {
+  width:80px;
+  height:auto;
+  float:left;
+}
+.navbar-toggle {
+  border:0px;
+}
+.navbar-brand {
+  margin-left:0px!important;
+  img.zdf-logo-lobbyradar {
+    width:150px;
+    margin:5px 10px 0px 10px;
+  }
+}
+  .navbar-toggle {
+    margin:6px;
+
+    .icon-bar {
+      background-color:white;
+    }
+  }
+
+  .navbar-collapse {
+    border-top:0px;
+
+    &.in,
+    &.collapsing {
+      background-color:#7b7b7b;
+    }
+  }
+  ul.nav {
+
+        // background-color:#7b7b7b;
+
+    a {
+      color:white; 
+      margin:13px;
+      padding:0px;
+      font-size:14px;
+    }
+
+  }
+  @media (min-width: @screen-md-min) {
+
+  ul.navbar-nav a {
+    border-left:1px solid white;
+    padding-left:7px;
+  }
+
+  ul.navbar-right a {
+    border-right:1px solid white;
+    border-left:0px solid white;
+    padding-right:7px;
+  }
+}
+
+
+  .navbar-brand {
+    padding:3px 0px;
+    height: 46px;
+    img {display:inline;}
+  }
 
   .zdf-logo {
     margin-top:7px;
@@ -175,6 +259,7 @@ line.link {
 
 .zdf-header-blue .search-form  {
   margin-bottom:20px;
+  margin-top:19px;
   .form-control {
     height:42px;
   }
@@ -185,11 +270,10 @@ line.link {
     height:42px;
   }
 }
-
-@media (min-width: @screen-sm-min) { 
-  .zdf-header-blue .search-form  {margin-top:19px;}
-}
-
+  .miz-logo {
+    float:left!important;
+    margin-top:10px;
+  }
 .zdf-header-blue {
   top:46px;
   position: absolute;
@@ -199,17 +283,24 @@ line.link {
     background: rgba(20,59,82,0.5);
   border-bottom: 1px solid rgba(20,59,82,1);
   
-  .navbar-brand {
-    padding:30px 0px;
+  .logo-name {
+    padding:5px 0px;
     color:white;
     font-size:32px;
     font-family: "Arial";
+    text-align:center;
+    width:100%;
+    float: left;
 
-    .logo-name {
-      float: left;
+      img {
+        margin:10px 0px;
+        max-width:150px;
+      }
       // margin: -80px 0px 0px 40px;
       // margin: -80px 0px 0px 40px; // only needed with fa-stack)
-    }
+
+
+
   .fa-stack {display:none;}
     .fa-bullseye {
       color:rgba(255,255,255,0.3);
@@ -227,7 +318,15 @@ line.link {
   }
 }
 
+@media (min-width: @screen-sm-min) { 
+  .zdf-header-blue .logo-name {
+    text-align:left;
 
+    img {
+      max-width:240px;
+    }
+  }
+}
 
 @media (max-width: 767px) {
     .zdf-header-blue,
@@ -306,6 +405,28 @@ svg {
   margin-bottom:10px;
 }
 
-.navbar-brand img {
-  margin-top:-15px;
+
+
+
+.modal {
+  color:#111;
+}
+
+.faq-page {
+  padding-top:70px;
+  min-height:100%;
+  background: #11354b; /* Old browsers */
+  background: -moz-linear-gradient(top,  #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#11354b), color-stop(65%,#a1bdc9), color-stop(77%,#a1bdc9), color-stop(100%,#6392a8)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #11354b 0%,#a1bdc9 65%,#a1bdc9 77%,#6392a8 100%); /* W3C */
+
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11354b', endColorstr='#6392a8',GradientType=0 ); /* IE6-9 */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
