--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -1,27 +1,24 @@
 <div class="container">
   
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-6">
-      <h2><br/><br/></h2>
-    </div>
-  </div>
-  
-  <div class="row">
     <div class="col-sm-6">
-      <h1>Wer macht was, und vor allem wann und mit wem?</h1>
-      <p class="lead"> 
-        Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetadipiscing elit. Maecenas faucibus mollis interdum.
-      </p>
+      <h1>Wer will was, und vor allem von wem?</h1>
+            <div class="videoWrapper">
+        <iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
+      </div>
       <p>
         Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
       </p>
     </div>
     
     <div class="col-sm-6">
-      <div class="videoWrapper">
-        <iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <button class="btn-ext btn-block btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">
+      <img class="center-block" width="25" height="auto" src="assets/images/arrow-top.png" /><br/>
+      <p class="lead text-center"> 
+        Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für [Chrome] runter!
+      </p>
+      <img class="center-block" width="40" height="auto" src="assets/images/arrow-bottom.png" />
+
+      <button class="btn-ext center-block btn btn-lg btn-primary" data-toggle="modal" data-target="#Extensions">
         Installier dir den Durchblick!
       </button>
     </div>
