--- a/assets/views/vizinfo.mustache
+++ b/assets/views/vizinfo.mustache
@@ -1,5 +1,6 @@
 
         <div class="table-responsive result-list">
+        <p>Ergebnisse für »Joschka Fischer«: 14. Klicken Sie auf einen Eintrag, um zu den Details zu gelangen.</p>
           <table class="table table-striped table-hover table-condensed">
             <thead>
               <tr>
