--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -2,10 +2,12 @@
 	
 	<div class="row">
 		<div class="col-sm-6">
-			<h1>Wer will was, und vor allem von wem?</h1>
-						<div class="videoWrapper">
+			<h1>Wer will was, und von wem?</h1>
+			<br/>
+			<div class="videoWrapper">
 				<iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
 			</div>
+			<br/>
 			<p>
 				Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
 			</p>
