--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -40,8 +40,7 @@
 				<p>Um den Zugriff auf die Lobbyradar-Datenbank noch weiter zu vereinfachen, gibt es die Browsererweiterung. Wenn Sie einmal installiert ist, werden auf allen aktivierten Seiten Namen, welche in der Lobbyradar-Datenbank hinterlegt sind, markiert. Wenn du mit der Maus über den Eintrag fährst, erscheint ein Popup-Fenster mit den jeweiligen Verbindungen. Ein Klick bringt dich direkt zur Lobbyradar-Website.</p>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">schließen</button>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
