separate nav in entity.mustache

--- a/assets/views/entity.mustache
+++ b/assets/views/entity.mustache
@@ -1,5 +1,7 @@
 {{>header}}
-{{>navigation}}
+{{>nav-grey}}
+{{>nav-blue}}
+
 <div class="container" id="main">
 	<div class="overlay">
 		<div class="container">
