--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6300,6 +6300,25 @@ button.close {
   width: 100%;
   height: 100%;
 }
+.bg-gradient,
+.faq-page {
+  background: #11354b;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #11354b), color-stop(65%, #a1bdc9), color-stop(77%, #a1bdc9), color-stop(100%, #6392a8));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#11354b', endColorstr='#6392a8', GradientType=0);
+  /* IE6-9 */
+}
 .zdf-header-blue .search-form {
   margin-bottom: 20px;
   margin-top: 19px;
@@ -6503,26 +6522,33 @@ button.close {
 .faq-page {
   padding-top: 70px;
   min-height: 100%;
-  background: #11354b;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #11354b), color-stop(65%, #a1bdc9), color-stop(77%, #a1bdc9), color-stop(100%, #6392a8));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #11354b 0%, #a1bdc9 65%, #a1bdc9 77%, #6392a8 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#11354b', endColorstr='#6392a8', GradientType=0);
-  /* IE6-9 */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+.faq-page .panel-default {
+  border: 0px!important;
+  background-color: transparent!important;
+  box-shadow: none!important;
+}
+.faq-page .panel-default .panel-heading {
+  background-color: transparent!important;
+  border: 0px!important;
+}
+.faq-page .panel-default .panel-heading a {
+  color: white;
+}
+.faq-page .panel-default .panel-heading a:after {
+  content: "\f067";
+  font-family: "FontAwesome";
+}
+.faq-page .panel-default .panel-heading a.collapsed:after {
+  content: "\f068";
+  font-family: "FontAwesome";
+}
+.faq-page .panel-default .panel-body {
+  border-top: 0px!important;
 }
 .modal {
   color: #111;
@@ -6611,6 +6637,11 @@ svg {
   color: #111;
   padding: 19px;
   z-index: 99!important;
+}
+.result-single .list-group p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .avatar {
   max-width: 100px;
