some structure for the faq

--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -29,7 +29,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingOne">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="<collapseOne>	</collapseOne>">
+								<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true">
 									Collapsible Group Item #1
 								</a>
 							</h4>
@@ -43,7 +43,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingTwo">
 							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" <<aria->	</aria->controls>			</aria-controls>="collapseTwo">
+								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false">
 									Collapsible Group Item #2
 								</a>
 							</h4>
@@ -57,7 +57,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingThree">
 							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" <	aria->			</aria->controls="collapseThree">
+								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false">
 									Collapsible Group Item #3
 								</a>
 							</h4>
