hide the networkviz till its ready

--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -26,10 +26,10 @@
 	</div>
 
 	{{! The Visualisation }}
-	<div id="networkviz-wrapper">
+	<div style="display:none" id="networkviz-wrapper">
 		<div id="networkviz"></div>
 	</div>
-
+	
 </div> {{! end .fullscreen }}
 
 {{>footer}}
