--- a/assets/views/vizinfo.mustache
+++ b/assets/views/vizinfo.mustache
@@ -23,5 +23,7 @@
 </div>
      
 <div class="result-single">
+  <a id="backtolist" class="btn btn-default" href="#"><i class="fa fa-arrow-left" aria-hidden="true"></i> Zurück zur Liste</a>
+
   <div class="content"></div>
 </div>
