link logos to root

--- a/assets/views/nav-blue.mustache
+++ b/assets/views/nav-blue.mustache
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3 col-xs-12 hidden-xs">
-				<a class="logo-name" href="#">    
+				<a class="logo-name" href="/">    
 					<img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
 				</a>
 			</div>
