--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -19,7 +19,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#">ZDFHeute</a></li>
+				<li><a href="#">ZDFheute</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a data-toggle="modal" data-target="#Extensions" href="#">Browser-Erweiterung</a></li>
