--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -474,6 +474,10 @@ svg {
 }
 
 .result-single {
+
+  #backtolist {
+    margin-bottom:10px;
+  }
   padding-top:40px;
   display: none;
   position: relative;
@@ -482,7 +486,7 @@ svg {
   color:#111;
   padding:19px;
   z-index: 99!important;
-  
+  h1.name {margin-top:0px!important;}
   .list-group p{
     text-overflow: ellipsis;
     white-space: nowrap;
