--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -493,6 +493,12 @@ svg {
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  .entity-source{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .avatar {
