add moment lib to convert times in FE

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
 	<script type="text/javascript" src="/assets/js/networkviz.js"></script>
 	<script type="text/javascript" src="/assets/js/networkdata.js"></script>
+	<script type="text/javascript" src="/assets/js/moment-with-locales.min.js"></script>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
