add browser icons to ext modal

--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -38,6 +38,29 @@
 			</div>
 			<div class="modal-body">
 				<p>Um den Zugriff auf die Lobbyradar-Datenbank noch weiter zu vereinfachen, gibt es die Browsererweiterung. Wenn Sie einmal installiert ist, werden auf allen aktivierten Seiten Namen, welche in der Lobbyradar-Datenbank hinterlegt sind, markiert. Wenn du mit der Maus über den Eintrag fährst, erscheint ein Popup-Fenster mit den jeweiligen Verbindungen. Ein Klick bringt dich direkt zur Lobbyradar-Website.</p>
+
+				<div class="list-group">
+					<a href="#" class="list-group-item">
+						<img src="/assets/images/firefox_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<h4 class="list-group-item-heading">Firefox</h4>
+						<p class="list-group-item-text">...</p>
+						<br style="clear:both"/>
+				  </a>
+				  <a href="#" class="list-group-item">
+						<img src="/assets/images/chrome_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<h4 class="list-group-item-heading">Chrome</h4>
+						<p class="list-group-item-text">...</p>
+						<br style="clear:both"/>
+
+					</a>
+					<a href="#" class="list-group-item">
+						<img src="/assets/images/safari_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<h4 class="list-group-item-heading">Safari</h4>
+						<p class="list-group-item-text">...</p>
+						<br style="clear:both"/>
+
+				  </a>
+				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">schließen</button>
